# wbt-rnd-scripts

./: README.md  pyproject.toml
src/castleshield_rinit_measurements/: main.py
workspaces/castleshield_rinit_measurements/: pyproject.toml
workspaces/castleshield_rinit_measurements/src/: main.py
workspaces/old_MAD_data_migration/: pyproject.toml
workspaces/old_MAD_data_migration/src/: move_ok_to_clean.py  ttk2json_batch.py  zip_clean_mad_data.py
